methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:23: error: Unit does not take parameters
  carre()
       ^PictureMono2:25: error: Unit does not take parameters
  carre()
       ^PictureMono2:27: error: Unit does not take parameters
  carre()
       ^PictureMono2:29: error: Unit does not take parameters
  carre()
       ^PictureMono2:31: error: Unit does not take parameters
   carre()
        ^PictureMono2:33: error: Unit does not take parameters
  carre()
       ^PictureMono2:35: error: Unit does not take parameters
  carre()
       ^PictureMono2:37: error: Unit does not take parameters
  carre()
       ^PictureMono2:39: error: Unit does not take parameters
  carre()
       ^